- Added Rocket Car Parts to the loot table of Sparkleshell Borer for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Saltstone Basilisk for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Saltstone Gazer for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Saltstone Crystalhide for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Salt Flats Scavenger for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Salt Flats Vulture for the quest Rocket Car Parts.
- Updated the flags of Rocket Car Parts to allow every member of a group to loot it.

[2022-07-01]
- Added Dark Iron Pillow to the loot table of Dark Iron Slaver for the quest Kill 'Em With Sleep Deprivation.
- Added Dark Iron Pillow to the loot table of Dark Iron Taskmaster for the quest Kill 'Em With Sleep Deprivation.
- Added Dark Iron Pillow to the loot table of Dark Iron Lookout for the quest Kill 'Em With Sleep Deprivation.
- Updated the flags of Dark Iron Pillow to allow every member of a group to loot it.

[2022-07-06]
- Added Filled Blood Gem to the loot table of Deranged Indu'le Villager for the quest In Service of Blood.
- Updated the flags of Filled Blood Gem to allow every member of a group to loot it.
- Added Filled Unholy Gem to the loot table of Duke Vallenhal for the quest In Service of the Unholy.
- Updated the flags of Filled Unholy Gem to allow every member of a group to loot it.
- Added Filled Frost Gem to the loot table of Ice Revenant for the quest In Service of Frost.
- Updated the flags of Filled Frost Gem to allow every member of a group to loot it.

[2022-07-20]
- Updated the respawn time of Scrying Orb.
- Added Strange Ore to the loot table of Risen Wintergarde Miner for the quest The Bleeding Ore.
- Updated the flags of Strange Ore to allow every member of a group to loot it.