@@ -21,8 +21,11 @@
 #include "ScriptedCreature.h"
 #include "ScriptedEscortAI.h"
 #include "CombatAI.h"
+#include "PassiveAI.h"
 #include "Vehicle.h"
 #include "WaypointMgr.h"
+#include "SpellScript.h"
+#include "ScriptedGossip.h"
 
 enum ReconnaissanceFlight
 {
@@ -123,22 +126,12 @@ public:
                 if (passenger && passenger->GetTypeId() == TYPEID_PLAYER)
                 {
                     if (Group* group = passenger->ToPlayer()->GetGroup())
-                    {
                         for (GroupReference* groupRef = group->GetFirstMember(); groupRef != nullptr; groupRef = groupRef->next())
-                        {
                             if (Player* member = groupRef->GetSource())
-                            {
-                                if (member->IsInMap(passenger))
-                                {
+                                if (member->GetDistance2d(passenger) < 200 && member != passenger)
                                     member->CastSpell(member, SPELL_CREDIT, true);
-                                }
-                            }
-                        }
-                    }
-                    else
-                    {
-                        passenger->CastSpell(passenger, SPELL_CREDIT, true);
-                    }
+
+                    passenger->CastSpell(passenger, SPELL_CREDIT, true);
                 }
 
                 me->DespawnOrUnsummon();
@@ -152,7 +145,410 @@ public:
     }
 };
 
+enum KickWhatKick
+{
+    NPC_LUCKY_WILHELM = 28054,
+    NPC_APPLE = 28053,
+    NPC_DROSTAN = 28328,
+    NPC_CRUNCHY = 28346,
+    NPC_THICKBIRD = 28093,
+
+    SPELL_HIT_APPLE = 51331,
+    SPELL_MISS_APPLE = 51332,
+    SPELL_MISS_BIRD_APPLE = 51366,
+    SPELL_APPLE_FALL = 51371,
+    SPELL_BIRD_FALL = 51369,
+
+    EVENT_MISS = 0,
+    EVENT_HIT = 1,
+    EVENT_MISS_BIRD = 2,
+
+    SAY_WILHELM_MISS = 0,
+    SAY_WILHELM_HIT = 1,
+    SAY_DROSTAN_REPLY_MISS = 0,
+};
+
+class spell_q12589_shoot_rjr : public SpellScriptLoader
+{
+public:
+    spell_q12589_shoot_rjr() : SpellScriptLoader("spell_q12589_shoot_rjr") { }
+
+    class spell_q12589_shoot_rjr_SpellScript : public SpellScript
+    {
+        PrepareSpellScript(spell_q12589_shoot_rjr_SpellScript);
+
+        SpellCastResult CheckCast()
+        {
+            if (Unit* target = GetExplTargetUnit())
+                if (target->GetEntry() == NPC_LUCKY_WILHELM)
+                    return SPELL_CAST_OK;
+
+            SetCustomCastResultMessage(SPELL_CUSTOM_ERROR_MUST_TARGET_WILHELM);
+            return SPELL_FAILED_CUSTOM_ERROR;
+        }
+
+        void HandleDummy(SpellEffIndex /*effIndex*/)
+        {
+            uint32 roll = urand(1, 100);
+
+            uint8 ev;
+            if (roll <= 50)
+                ev = EVENT_MISS;
+            else if (roll <= 83)
+                ev = EVENT_HIT;
+            else
+                ev = EVENT_MISS_BIRD;
+
+            Unit* shooter = GetCaster();
+            Creature* wilhelm = GetHitUnit()->ToCreature();
+            Creature* apple = shooter->FindNearestCreature(NPC_APPLE, 30);
+            Creature* drostan = shooter->FindNearestCreature(NPC_DROSTAN, 30);
+
+            if (!wilhelm || !apple || !drostan)
+                return;
+
+            switch (ev)
+            {
+                case EVENT_MISS_BIRD:
+                    {
+                        Creature* crunchy = shooter->FindNearestCreature(NPC_CRUNCHY, 30);
+                        Creature* bird = shooter->FindNearestCreature(NPC_THICKBIRD, 30);
+
+                        if (!bird || !crunchy)
+                            ; // fall to EVENT_MISS
+                        else
+                        {
+                            shooter->CastSpell(bird, SPELL_MISS_BIRD_APPLE);
+                            bird->CastSpell(bird, SPELL_BIRD_FALL);
+                            wilhelm->AI()->Talk(SAY_WILHELM_MISS);
+                            drostan->AI()->Talk(SAY_DROSTAN_REPLY_MISS);
+
+                            Unit::Kill(bird, bird);
+                            crunchy->GetMotionMaster()->MovePoint(0, bird->GetPositionX(), bird->GetPositionY(),
+                                                                  bird->GetMapWaterOrGroundLevel(bird->GetPositionX(), bird->GetPositionY(), bird->GetPositionZ()));
+                            /// @todo Make crunchy perform emote eat when he reaches the bird
+
+                            break;
+                        }
+                        [[fallthrough]];
+                    }
+                case EVENT_MISS:
+                    {
+                        shooter->CastSpell(wilhelm, SPELL_MISS_APPLE);
+                        wilhelm->AI()->Talk(SAY_WILHELM_MISS);
+                        drostan->AI()->Talk(SAY_DROSTAN_REPLY_MISS);
+                        break;
+                    }
+                case EVENT_HIT:
+                    {
+                        shooter->CastSpell(apple, SPELL_HIT_APPLE);
+                        apple->CastSpell(apple, SPELL_APPLE_FALL);
+                        wilhelm->AI()->Talk(SAY_WILHELM_HIT);
+
+                        if (Player* player = shooter->ToPlayer())
+                        {
+                            if (Group* group = player->GetGroup())
+                                for (GroupReference* groupRef = group->GetFirstMember(); groupRef != nullptr; groupRef = groupRef->next())
+                                    if (Player* member = groupRef->GetSource())
+                                        if (member->GetDistance2d(player) < 200 && member != player)
+                                            member->KilledMonsterCredit(NPC_APPLE);
+
+                            player->KilledMonsterCredit(NPC_APPLE);
+                            //apple->DespawnOrUnsummon(); zomg!
+                        }
+
+                        break;
+                    }
+            }
+        }
+
+        void Register() override
+        {
+            OnCheckCast += SpellCheckCastFn(spell_q12589_shoot_rjr_SpellScript::CheckCast);
+            OnEffectHitTarget += SpellEffectFn(spell_q12589_shoot_rjr_SpellScript::HandleDummy, EFFECT_0, SPELL_EFFECT_DUMMY);
+        }
+    };
+
+    SpellScript* GetSpellScript() const override
+    {
+        return new spell_q12589_shoot_rjr_SpellScript();
+    }
+};
+
+enum StillAtIt
+{
+    NPC_MANUS = 28566,
+    NPC_WANTS_BANANAS = 28537,
+
+    QUEST_STILL_AT_IT = 12644,
+    GOSSIP_MANUS_MENU = 9713,
+
+    SAY_MANUS_START = 0,
+    SAY_MANUS_ORANGE = 1,
+    SAY_MANUS_PAPAYA = 2,
+    SAY_MANUS_BANANA = 3,
+    SAY_MANUS_PRESSUE = 4,
+    SAY_MANUS_HEAT = 5,
+    SAY_MANUS_WELL_DONE = 6,
+    SAY_MANUS_FAILED = 7,
+    SAY_MANUS_END = 8,
+};
+
+class npc_still_at_it_trigger_groupquests : public CreatureScript
+{
+public:
+    npc_still_at_it_trigger_groupquests() : CreatureScript("npc_still_at_it_trigger") { }
+
+    CreatureAI* GetAI(Creature* pCreature) const override
+    {
+        return new npc_still_at_it_trigger_groupquestsAI(pCreature);
+    }
+
+    struct npc_still_at_it_trigger_groupquestsAI : public NullCreatureAI
+    {
+        bool running;
+        bool success;
+        ObjectGuid playerGUID;
+        ObjectGuid thunderbrewGUID;
+        int32 tensecstimer;
+        int32 timer;
+        uint8 stepcount;
+        uint8 currentstep;
+        uint8 expectedaction;
+        uint8 playeraction;
+
+        npc_still_at_it_trigger_groupquestsAI(Creature* pCreature) : NullCreatureAI(pCreature) {}
+
+        Creature* GetManus() { return ObjectAccessor::GetCreature(*me, thunderbrewGUID); }
+
+        void Reset() override
+        {
+            running = false;
+            success = false;
+            playerGUID.Clear();
+            thunderbrewGUID.Clear();
+            tensecstimer = 0;
+            timer = 0;
+            stepcount = 0;
+            currentstep = 0;
+            expectedaction = 0;
+            playeraction = 0;
+        }
+
+        void DamageTaken(Unit*, uint32& damage, DamageEffectType, SpellSchoolMask) override
+        {
+            damage = 0;
+        }
+
+        void Start()
+        {
+            timer = 5000;
+            running = true;
+            stepcount = urand(5, 10);
+            GetManus()->AI()->Talk(SAY_MANUS_START);
+        }
+
+        void CheckAction(uint8 a, ObjectGuid guid)
+        {
+            if (guid != playerGUID)
+                return;
+
+            if (a == expectedaction)
+            {
+                currentstep++;
+
+                if (Creature* th = ObjectAccessor::GetCreature(*me, thunderbrewGUID))
+                    th->HandleEmoteCommand(EMOTE_ONESHOT_CHEER_NO_SHEATHE);
+
+                GetManus()->AI()->Talk(SAY_MANUS_WELL_DONE);
+
+                if (currentstep >= stepcount)
+                {
+                    GetManus()->AI()->Talk(SAY_MANUS_WELL_DONE);
+                    success = true;
+                    timer = 3000;
+                }
+                else
+                {
+                    expectedaction = 0;
+                    timer = 3000;
+                }
+            }
+            else
+            {
+                GetManus()->AI()->Talk(SAY_MANUS_FAILED);
+                Reset();
+            }
+        }
+
+        void SpellHit(Unit* caster, SpellInfo const* spellInfo) override // for banana(51932), orange(51931), papaya(51933)
+        {
+            if (running)
+            {
+                uint8 a = 0;
+                switch (spellInfo->Id)
+                {
+                case 51931:
+                    a = 4;
+                    break;
+                case 51932:
+                    a = 3;
+                    break;
+                case 51933:
+                    a = 5;
+                    break;
+                }
+
+                CheckAction(a, caster->GetGUID());
+            }
+        }
+
+        void UpdateAI(uint32 diff) override
+        {
+            if (running)
+            {
+                if (timer)
+                {
+                    timer -= diff;
+                    if (timer < 0)
+                        timer = 0;
+                }
+                else if (success)
+                {
+                    GetManus()->AI()->Talk(SAY_MANUS_END);
+                    Player* player = ObjectAccessor::FindConnectedPlayer(playerGUID);
+                    if (Group* group = player->GetGroup())
+                    {
+                        for (GroupReference* groupRef = group->GetFirstMember(); groupRef != nullptr; groupRef = groupRef->next())
+                            if (Player* member = groupRef->GetSource())
+                                if (member->GetDistance2d(player) < 200 && member->GetQuestStatus(QUEST_STILL_AT_IT) == QUEST_STATUS_INCOMPLETE)
+                                    member->AddItem(38688, 1);
+                    }
+                    else
+                    {
+                        me->SummonGameObject(190643, 5546.55f, 5768.0f, -78.03f, 0.0f, 0.0f, 0.0f, 0.0f, 0.0f, 0);
+                    }
+                    Reset();
+                }
+                else if (expectedaction != 0) // didn't make it in 10 seconds
+                {
+                    GetManus()->AI()->Talk(SAY_MANUS_FAILED);
+                    Reset();
+                }
+                else // it's time to rand next move
+                {
+                    expectedaction = urand(1, 5);
+                    switch (expectedaction)
+                    {
+                    case 1:
+                        GetManus()->AI()->Talk(SAY_MANUS_PRESSUE);
+                        break;
+                    case 2:
+                        GetManus()->AI()->Talk(SAY_MANUS_HEAT);
+                        break;
+                    case 3:
+                        GetManus()->AI()->Talk(SAY_MANUS_BANANA);
+                        break;
+                    case 4:
+                        GetManus()->AI()->Talk(SAY_MANUS_ORANGE);
+                        break;
+                    case 5:
+                        GetManus()->AI()->Talk(SAY_MANUS_PAPAYA);
+                        break;
+                    }
+                    timer = 10000;
+                }
+            }
+        }
+    };
+};
+
+class npc_mcmanus_groupquests : public CreatureScript
+{
+public:
+    npc_mcmanus_groupquests() : CreatureScript("npc_mcmanus") {}
+
+    bool OnGossipHello(Player* player, Creature* creature) override
+    {
+        if (!player)
+            return true;
+
+        if (creature->IsQuestGiver())
+            player->PrepareQuestMenu(creature->GetGUID());
+
+        if (player->GetQuestStatus(QUEST_STILL_AT_IT) == QUEST_STATUS_INCOMPLETE)
+            AddGossipItemFor(player, GOSSIP_MANUS_MENU, 0, GOSSIP_SENDER_MAIN, GOSSIP_ACTION_INFO_DEF + 1);
+
+        SendGossipMenuFor(player, player->GetGossipTextId(creature), creature->GetGUID());
+        return true;
+    }
+
+    bool OnGossipSelect(Player* player, Creature* creature, uint32  /*uiSender*/, uint32 uiAction) override
+    {
+        if (!player)
+            return true;
+
+        if (uiAction == GOSSIP_ACTION_INFO_DEF + 1)
+        {
+            Creature* trigger = creature->FindNearestCreature(NPC_WANTS_BANANAS, 20.0f, true);
+            if (trigger && trigger->AI())
+                if (!CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->running)
+                {
+                    CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->playerGUID = player->GetGUID();
+                    CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->thunderbrewGUID = creature->GetGUID();
+                    CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->Start();
+                }
+        }
+
+        CloseGossipMenuFor(player);
+        return true;
+    }
+};
+
+class go_pressure_valve_groupquests : public GameObjectScript
+{
+public:
+    go_pressure_valve_groupquests() : GameObjectScript("go_pressure_valve") { }
+
+    bool OnGossipHello(Player* player, GameObject* go) override
+    {
+        if (!player)
+            return true;
+
+        Creature* trigger = go->FindNearestCreature(NPC_WANTS_BANANAS, 20.0f, true);
+        if (trigger && trigger->AI())
+            if (CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->running)
+                CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->CheckAction(1, player->GetGUID());
+
+        return false;
+    }
+};
+
+class go_brazier_groupquests : public GameObjectScript
+{
+public:
+    go_brazier_groupquests() : GameObjectScript("go_brazier") { }
+
+    bool OnGossipHello(Player* player, GameObject* go) override
+    {
+        if (!player)
+            return true;
+
+        Creature* trigger = go->FindNearestCreature(NPC_WANTS_BANANAS, 20.0f, true);
+        if (trigger && trigger->AI())
+            if (CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->running)
+                CAST_AI(npc_still_at_it_trigger_groupquests::npc_still_at_it_trigger_groupquestsAI, trigger->AI())->CheckAction(2, player->GetGUID());
+
+        return false;
+    }
+};
+
 void AddSC_zone_sholazar_basin_groupquests()
 {
     new npc_vics_flying_machine_groupquests();
+    new spell_q12589_shoot_rjr();
+    new npc_still_at_it_trigger_groupquests();
+    new npc_mcmanus_groupquests();
+    new go_pressure_valve_groupquests();
+    new go_brazier_groupquests();
 }
